syntax = "proto3";

package arg_services.entailment.v1;
option java_package = "de.uni_trier.recap.arg_services.entailment.v1";

service EntailmentService {
    rpc Entailment (EntailmentRequest) returns (EntailmentResponse);
}

message EntailmentRequest {
    string language = 1;
    string premise = 2;
    string claim = 3;
}

message EntailmentResponse {
    Prediction prediction = 1;
    repeated Detail details = 2;
}

message Detail {
    double probability = 1;
    Prediction prediction = 2;
}

enum Prediction {
    PREDICTION_UNSPECIFIED = 0;
    PREDICTION_ENTAILMENT = 1;
    PREDICTION_CONTRADICTION = 2;
    PREDICTION_NEUTRAL = 3;
}
